fixed by duplicated html and css from js13k game, more investigation needed to figure out what setting exactly causes blurriness in chrome

--- a/style.css
+++ b/style.css
@@ -6,25 +6,11 @@ body {
 }
 
 canvas {
+    display: inline-block;
     width: 100%;
     height: 50vw;
     image-rendering: pixelated;
     image-rendering: crisp-edges;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: -webkit-optimize-contrast;
-    image-rendering: -o-crisp-edges;
-    image-rendering: optimize-contrast;
-    image-rendering: -webkit-crisp-edges;
-}
 
-
-
-#gamebox {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
 }
 
